[gd_scene load_steps=4 format=3 uid="uid://ccmoji781onka"]

[ext_resource type="Script" path="res://scripts/skills/meleeAttack.gd" id="1_tdsmw"]

[sub_resource type="QuadMesh" id="QuadMesh_jnme7"]
size = Vector2(500, 15)
center_offset = Vector3(250, 0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljhpx"]
size = Vector2(500, 15)

[node name="MeleeAttack" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_tdsmw")
damages = 2

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
mesh = SubResource("QuadMesh_jnme7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(250, 0)
shape = SubResource("RectangleShape2D_ljhpx")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
